[tool.poetry]
name = "v3-keeper"
version = "0.1.0"
description = "StakeWise keeper service is used to collect and push oracle votes to blockchain."
authors = ["StakeWise Labs <info@stakewise.io>"]
readme = "README.md"
license = "AGPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.10"
python-decouple = "==3.6"
sentry-sdk = "==1.9.5"
web3 = "==6.0.0b9"
sw-utils = { git = "https://github.com/stakewise/sw-utils.git", rev = "v0.2.10" }

[tool.poetry.group.dev.dependencies]
isort = "==5.10.1"
pytest = "==7.1.2"
pytest-asyncio = "==0.19.0"
pre-commit = "==2.20.0"
bandit = "==1.7.4"
black = "==22.12.0"
pylint = "==2.15.9"
mypy = "==0.991"
flake8-pyproject = "==1.2.2"
faker = "15.3.4"

[tool.bandit]
exclude_dirs = ["*/tests/*", "src/config/networks.py"]

[tool.pylint."pre-commit-hook"]
disable = ["C0103", "C0114", "C0115", "C0116", "R0801", "R0902", "R0903", "R0914", "W0511", "W0703", "W1514", "E1129"]

[tool.pylint."BASIC"]
good-names = ["db", "i", "el", "e", "w", "f", "w3"]

[tool.flake8]
max-line-length = 100
select = ["E121"]

[tool.mypy]
ignore_missing_imports = true
python_version = "3.10"

[tool.isort]
profile = "black"

[tool.black]
line-length = 100
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
