[tool.poetry]
name = "v3-keeper"
version = "0.2.0"
description = "StakeWise keeper service is used to collect and push oracle votes to blockchain."
authors = ["StakeWise Labs <info@stakewise.io>"]
readme = "README.md"
license = "AGPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.10"
python-decouple = "==3.7"
sentry-sdk = "==1.15.0"
web3 = "==6.5.0"
sw-utils = {git = "https://github.com/stakewise/sw-utils.git", rev = "v0.3.12"}
tomli = "==2.0.1"
prometheus-client = "==0.17.0"

[tool.poetry.group.dev.dependencies]
isort = "==5.12.0"
pytest = "==7.2.1"
pytest-asyncio = "==0.20.3"
pre-commit = "==3.0.4"
bandit = { version = "==1.7.4", extras = ["toml"] }
black = { version = "==23.1.0", extras = ["d"] }
pylint = "==2.16.2"
mypy = "==1.0.1"
flake8-pyproject = "==1.2.2"
faker = "==17.0.0"

[tool.bandit]
exclude_dirs = ["*/tests/*", "src/config/networks.py"]

[tool.pylint."pre-commit-hook"]
disable = ["C0103", "C0114", "C0115", "C0116", "R0801", "R0902", "R0903", "R0914", "W0511", "W0703", "W1514", "E1129"]

[tool.pylint."BASIC"]
good-names = ["db", "i", "el", "e", "w", "f", "w3"]

[tool.flake8]
extend-ignore = ["E203", "E501"]  # line length will be checked by pylint

[tool.mypy]
ignore_missing_imports = true
python_version = "3.10"

[tool.isort]
profile = "black"

[tool.black]
line-length = 100
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
