[tool.poetry]
name = "v3-keeper"
version = "v0.10.1"
description = "StakeWise keeper service is used to collect and push oracle votes to blockchain."
authors = ["StakeWise Labs <info@stakewise.io>"]
readme = "README.md"
license = "AGPL-3.0-only"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
python-decouple = "==3.8"
sentry-sdk = "==1.34.0"
sw-utils = {git = "https://github.com/stakewise/sw-utils.git", rev = "v0.7.7"}
tomli = "==2.0.1"
prometheus-client = "==0.18.0"

[tool.poetry.group.dev.dependencies]
isort = "==5.12.0"
pytest = "==7.4.3"
pytest-asyncio = "==0.21.1"
pre-commit = "==3.5.0"
bandit = { version = "==1.7.5", extras = ["toml"] }
black = { version = "==23.10.1", extras = ["d"] }
pylint = "==3.0.2"
mypy = "==1.6.1"
flake8-pyproject = "==1.2.3"
faker = "==19.12.0"
flake8-datetimez = "==20.10.0"
flake8-print = "==5.0.0"
coverage = "==7.3.2"
types-requests = "==2.31.0.20240406"

[tool.bandit]
exclude_dirs = ["*/tests/*", "src/config/networks.py"]

[tool.pylint."pre-commit-hook"]
disable = ["C0103", "C0114", "C0115", "C0116", "R0801", "R0902", "R0903", "R0914", "W0511", "W0703", "W1514", "E1129"]

[tool.pylint."BASIC"]
good-names = ["db", "i", "el", "e", "w", "f", "w3"]

[tool.flake8]
extend-ignore = ["E203", "E501"]  # line length will be checked by pylint

[tool.mypy]
exclude = ["test"]
ignore_missing_imports = true
python_version = "3.10"
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true

[tool.isort]
profile = "black"

[tool.black]
line-length = 100
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
fail_under = 75
omit = ["*/tests/*", "conftest.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
